# rusty-panda

./: Cargo.toml  README.md  build.rs  sample_data.parquet
scripts/: convert.py  generate_sample_data.py  sample_data.csv  sample_data.json
src/: app.rs  color.rs  main.rs  state.rs
src/data/: filter.rs  loader.rs  mod.rs  model.rs
src/ui/: mod.rs  panels.rs  plot.rs
