[package]
name = "rusty-panda"
version = "0.1.0"
edition = "2021"
default-run = "rusty-panda"
description = "Cross-platform spectral data viewer built with egui"
license = "MIT"

[dependencies]
# UI framework
eframe = { version = "0.31", features = ["default"] }
egui_plot = "0.31"
egui_extras = { version = "0.31", features = ["datepicker", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# File dialogs (cross-platform: macOS, Windows, Linux)
rfd = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Parquet / Arrow (read spectral data from .parquet files)
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

# Color generation
palette = "0.7"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
